[BL-170] Added /images (POST) API
