# swagger_server/models/__init__.py
@@ -2,18 +2,24 @@
 
 from __future__ import absolute_import
 # import models into model package
+from .add_image_response import AddImageResponse
+from .add_image_response_data import AddImageResponseData
 from .add_object_response import AddObjectResponse
 from .add_object_response_data import AddObjectResponseData
 from .add_product_response import AddProductResponse
 from .add_product_response_data import AddProductResponseData
 from .add_version_response import AddVersionResponse
 from .add_version_response_data import AddVersionResponseData
+from .box_array import BoxArray
+from .box_object import BoxObject
+from .boxes_array import BoxesArray
 from .delete_product_response import DeleteProductResponse
 from .feedback import Feedback
 from .get_object_response import GetObjectResponse
 from .get_product_response import GetProductResponse
 from .get_products_response import GetProductsResponse
 from .get_version_response import GetVersionResponse
+from .image import Image
 from .latest_version_response import LatestVersionResponse
 from .object import Object
 from .product import Product
