# swagger_server/models/add_image_response.py
@@ -1,0 +1,91 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from swagger_server.models.add_image_response_data import AddImageResponseData
+from .base_model_ import Model
+from datetime import date, datetime
+from typing import List, Dict
+from ..util import deserialize_model
+
+
+class AddImageResponse(Model):
+    """
+    NOTE: This class is auto generated by the swagger code generator program.
+    Do not edit the class manually.
+    """
+    def __init__(self, message: str=None, data: AddImageResponseData=None):
+        """
+        AddImageResponse - a model defined in Swagger
+
+        :param message: The message of this AddImageResponse.
+        :type message: str
+        :param data: The data of this AddImageResponse.
+        :type data: AddImageResponseData
+        """
+        self.swagger_types = {
+            'message': str,
+            'data': AddImageResponseData
+        }
+
+        self.attribute_map = {
+            'message': 'message',
+            'data': 'data'
+        }
+
+        self._message = message
+        self._data = data
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'AddImageResponse':
+        """
+        Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The AddImageResponse of this AddImageResponse.
+        :rtype: AddImageResponse
+        """
+        return deserialize_model(dikt, cls)
+
+    @property
+    def message(self) -> str:
+        """
+        Gets the message of this AddImageResponse.
+
+        :return: The message of this AddImageResponse.
+        :rtype: str
+        """
+        return self._message
+
+    @message.setter
+    def message(self, message: str):
+        """
+        Sets the message of this AddImageResponse.
+
+        :param message: The message of this AddImageResponse.
+        :type message: str
+        """
+
+        self._message = message
+
+    @property
+    def data(self) -> AddImageResponseData:
+        """
+        Gets the data of this AddImageResponse.
+
+        :return: The data of this AddImageResponse.
+        :rtype: AddImageResponseData
+        """
+        return self._data
+
+    @data.setter
+    def data(self, data: AddImageResponseData):
+        """
+        Sets the data of this AddImageResponse.
+
+        :param data: The data of this AddImageResponse.
+        :type data: AddImageResponseData
+        """
+
+        self._data = data
+
