# swagger_server/models/image.py
@@ -1,0 +1,117 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from swagger_server.models.boxes_array import BoxesArray
+from .base_model_ import Model
+from datetime import date, datetime
+from typing import List, Dict
+from ..util import deserialize_model
+
+
+class Image(Model):
+    """
+    NOTE: This class is auto generated by the swagger code generator program.
+    Do not edit the class manually.
+    """
+    def __init__(self, id: str=None, url: str=None, boxes: BoxesArray=None):
+        """
+        Image - a model defined in Swagger
+
+        :param id: The id of this Image.
+        :type id: str
+        :param url: The url of this Image.
+        :type url: str
+        :param boxes: The boxes of this Image.
+        :type boxes: BoxesArray
+        """
+        self.swagger_types = {
+            'id': str,
+            'url': str,
+            'boxes': BoxesArray
+        }
+
+        self.attribute_map = {
+            'id': 'id',
+            'url': 'url',
+            'boxes': 'boxes'
+        }
+
+        self._id = id
+        self._url = url
+        self._boxes = boxes
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Image':
+        """
+        Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Image of this Image.
+        :rtype: Image
+        """
+        return deserialize_model(dikt, cls)
+
+    @property
+    def id(self) -> str:
+        """
+        Gets the id of this Image.
+
+        :return: The id of this Image.
+        :rtype: str
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id: str):
+        """
+        Sets the id of this Image.
+
+        :param id: The id of this Image.
+        :type id: str
+        """
+
+        self._id = id
+
+    @property
+    def url(self) -> str:
+        """
+        Gets the url of this Image.
+
+        :return: The url of this Image.
+        :rtype: str
+        """
+        return self._url
+
+    @url.setter
+    def url(self, url: str):
+        """
+        Sets the url of this Image.
+
+        :param url: The url of this Image.
+        :type url: str
+        """
+
+        self._url = url
+
+    @property
+    def boxes(self) -> BoxesArray:
+        """
+        Gets the boxes of this Image.
+
+        :return: The boxes of this Image.
+        :rtype: BoxesArray
+        """
+        return self._boxes
+
+    @boxes.setter
+    def boxes(self, boxes: BoxesArray):
+        """
+        Sets the boxes of this Image.
+
+        :param boxes: The boxes of this Image.
+        :type boxes: BoxesArray
+        """
+
+        self._boxes = boxes
+
