# swagger_server/swagger/swagger.yaml
@@ -246,6 +246,37 @@ paths:
         404:
           description: "Host not found"
       x-swagger-router-controller: "swagger_server.controllers.product_controller"
+  /products/images/{imageId}/objects/{objectId}:
+    get:
+      tags:
+      - "product"
+      summary: "Get Products by imageId and objectId"
+      description: "Returns Products belongs to a imageId and objectId"
+      operationId: "get_products_by_image_id_and_object_id"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "imageId"
+        in: "path"
+        description: ""
+        required: true
+        type: "string"
+      - name: "objectId"
+        in: "path"
+        description: ""
+        required: true
+        type: "integer"
+        format: "int32"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/GetProductsResponse"
+        400:
+          description: "Invalid input supplied"
+        404:
+          description: "Host or productNo not found"
+      x-swagger-router-controller: "swagger_server.controllers.product_controller"
   /products/hosts/{hostCode}/products/{productNo}:
     get:
       tags:
@@ -327,6 +358,32 @@ paths:
         404:
           description: "Product not found"
       x-swagger-router-controller: "swagger_server.controllers.object_controller"
+  /images:
+    post:
+      tags:
+      - "image"
+      summary: "Added a new Image"
+      description: ""
+      operationId: "add_image"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Product object that needs to be added to the db."
+        required: true
+        schema:
+          $ref: "#/definitions/Image"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/AddImageResponse"
+        400:
+          description: "Invalid input"
+      x-swagger-router-controller: "swagger_server.controllers.image_controller"
 securityDefinitions:
   api_key:
     type: "apiKey"
@@ -474,6 +531,39 @@ definitions:
         type: "string"
       style:
         type: "string"
+  BoxArray:
+    type: "array"
+    items:
+      type: "number"
+      format: "float"
+      description: ""
+    maxItems: 4
+  BoxesArray:
+    type: "array"
+    items:
+      $ref: "#/definitions/BoxObject"
+  BoxObject:
+    type: "object"
+    properties:
+      box:
+        $ref: "#/definitions/BoxArray"
+      class_code:
+        type: "string"
+      class_name:
+        type: "string"
+      products:
+        type: "array"
+        items:
+          $ref: "#/definitions/Product"
+  Image:
+    type: "object"
+    properties:
+      id:
+        type: "string"
+      url:
+        type: "string"
+      boxes:
+        $ref: "#/definitions/BoxesArray"
   AddProductResponse:
     type: "object"
     properties:
@@ -547,6 +637,13 @@ definitions:
         type: "string"
       data:
         $ref: "#/definitions/Object"
+  AddImageResponse:
+    type: "object"
+    properties:
+      message:
+        type: "string"
+      data:
+        $ref: "#/definitions/AddImageResponse_data"
   AddProductResponse_data:
     properties:
       product_id:
@@ -558,6 +655,10 @@ definitions:
   AddObjectResponse_data:
     properties:
       object_id:
+        type: "string"
+  AddImageResponse_data:
+    properties:
+      image_id:
         type: "string"
 externalDocs:
   description: "Find out more about BlueLens"
